--- a/deploy/chart/topolvm/templates/scheduler/deployment.yaml
+++ b/deploy/chart/topolvm/templates/scheduler/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
   {{- include "topolvm.labels" . | nindent 4 }}
 spec:
-  replicas: 2
+  replicas: {{ .Values.scheduler.replicaCount }}
   selector:
     matchLabels:
       app.kubernetes.io/name: topolvm-scheduler
