--- a/deploy/chart/topolvm/templates/node/daemonset.yaml
+++ b/deploy/chart/topolvm/templates/node/daemonset.yaml
@@ -13,7 +13,9 @@ spec:
       labels:
         app.kubernetes.io/name: node
       annotations:
-        prometheus.io/port: "8080"
+        {{ if .Values.node.metrics.annotations }}
+        {{ toYaml .Values.node.metrics.annotations | indent 8 }}
+        {{ end }}
     spec:
       serviceAccountName: node
       containers:
