--- a/deploy/chart/topolvm/values.yaml
+++ b/deploy/chart/topolvm/values.yaml
@@ -3,6 +3,13 @@ image:
   tag: 0.5.3
   pullPolicy: IfNotPresent
 
+# CSI node service
+node:
+  metrics:
+    annotations:
+      prometheus.io/port: "8080"
+
+# CSI controller service
 controller:
   replicaCount: 1
   terminationGracePeriodSeconds: 5
@@ -18,13 +25,15 @@ controller:
       maxSurge: 50%
       maxUnavailable: 50%
 
+# A scheduler extender for TopoLVM
 scheduler:
   # If you run with a managed control plane (such as GKE, AKS, etc), topolvm-scheduler should be deployed as Deployment and Service
   # topolvm-scheduler should otherwise be deployed as DaemonSet in unmanaged (i.e. bare metal) deployments
   # possible values:  daemonset/deployment
   type: daemonset
   # Use only if you choose `scheduler.type` deployment
-  replicaCount: 2
+  deployment:
+    replicaCount: 2
   terminationGracePeriodSeconds: 5
   resources:
     requests:
