--- a/deploy/chart/topolvm/templates/scheduler/deployment.yaml
+++ b/deploy/chart/topolvm/templates/scheduler/deployment.yaml
@@ -7,6 +7,10 @@ metadata:
   {{- include "topolvm.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.scheduler.deployment.replicaCount }}
+  strategy:
+    rollingUpdate:
+      maxSurge: {{ .Values.scheduler.deployment.strategy.rollingUpdate.maxSurge }}
+      maxUnavailable: {{ .Values.scheduler.deployment.strategy.rollingUpdate.maxUnavailable }}
   selector:
     matchLabels:
       app.kubernetes.io/name: topolvm-scheduler
@@ -38,4 +42,8 @@ spec:
         - name: scheduler-options
           configMap:
             name: scheduler-options
+      {{- with .Values.scheduler.deployment.tolerations }}
+      tolerations:
+{{ toYaml . | indent 8 }}
+      {{- end }}
 {{ end }}
