--- a/deploy/chart/topolvm/templates/scheduler/daemonset.yaml
+++ b/deploy/chart/topolvm/templates/scheduler/daemonset.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
   {{- include "topolvm.labels" . | nindent 4 }}
 spec:
+  updateStrategy:
+{{ toYaml .Values.scheduler.updateStrategy | indent 4 }}
   selector:
     matchLabels:
       app.kubernetes.io/name: topolvm-scheduler
@@ -35,13 +37,17 @@ spec:
           resources:
 {{ toYaml .Values.scheduler.resources | indent 12 }}
       hostNetwork: true
-      {{- with .Values.scheduler.daemonset.tolerations }}
+      {{- with .Values.scheduler.tolerations }}
       tolerations:
 {{ toYaml . | indent 8 }}
       {{- end }}
-      {{- with .Values.scheduler.daemonset.affinity }}
+      {{- with .Values.scheduler.affinity }}
       affinity:
 {{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- if .Values.controller.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.scheduler.nodeSelector | indent 8 }}
       {{- end }}
       volumes:
         - name: scheduler-options
