--- a/deploy/chart/topolvm/templates/scheduler/deployment.yaml
+++ b/deploy/chart/topolvm/templates/scheduler/deployment.yaml
@@ -8,9 +8,7 @@ metadata:
 spec:
   replicas: {{ .Values.scheduler.deployment.replicaCount }}
   strategy:
-    rollingUpdate:
-      maxSurge: {{ .Values.scheduler.deployment.strategy.rollingUpdate.maxSurge }}
-      maxUnavailable: {{ .Values.scheduler.deployment.strategy.rollingUpdate.maxUnavailable }}
+{{ toYaml .Values.scheduler.updateStrategy | indent 4 }}
   selector:
     matchLabels:
       app.kubernetes.io/name: topolvm-scheduler
@@ -42,8 +40,16 @@ spec:
         - name: scheduler-options
           configMap:
             name: scheduler-options
-      {{- with .Values.scheduler.deployment.tolerations }}
+      {{- with .Values.scheduler.affinity }}
+      affinity:
+{{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- with .Values.scheduler.tolerations }}
       tolerations:
 {{ toYaml . | indent 8 }}
+      {{- end }}
+      {{- if .Values.controller.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.scheduler.nodeSelector | indent 8 }}
       {{- end }}
 {{ end }}
