--- a/deploy/chart/topolvm/templates/storageclass.yaml
+++ b/deploy/chart/topolvm/templates/storageclass.yaml
@@ -2,7 +2,7 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: topolvm-provisioner
+  name: {{ .Values.storageclass.name }}
   annotations:
     storageclass.kubernetes.io/is-default-class: {{ .Values.storageclass.defaultclass | quote }}
   {{- with .Values.storageclass.annotations }}
