--- a/deploy/chart/topolvm/templates/scheduler/daemonset.yaml
+++ b/deploy/chart/topolvm/templates/scheduler/daemonset.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   updateStrategy:
 {{ toYaml .Values.scheduler.updateStrategy | indent 4 }}
+  minReadySeconds: {{ .Values.scheduler.minReadySeconds }}
   selector:
     matchLabels:
       app.kubernetes.io/name: topolvm-scheduler
