--- a/deploy/chart/topolvm/templates/controller/deployment.yaml
+++ b/deploy/chart/topolvm/templates/controller/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
   {{- include "topolvm.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.controller.replicaCount }}
+  minReadySeconds: {{ .Values.controller.minReadySeconds }}
   strategy:
 {{ toYaml .Values.controller.updateStrategy | indent 4 }}
   selector:
